OOZIE-2995 In preparation for Java 8, remove MaxPermSize=512m (Artem Ervits via asasvari)